<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Toasteando">
    <!--android:background="@drawable/yodababy"-->

    <EditText
        android:id="@+id/txtVerti"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Desplazamiento Vertical"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/txtHori"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Desplazamiento Horizontal"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/txtTitulo"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Introduzca el texto"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/btnToasteando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toasteando"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="156dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446">

        <RadioButton
            android:id="@+id/rbTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topT" />

        <RadioButton
            android:id="@+id/rbCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centerT" />

        <RadioButton
            android:id="@+id/rbBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottomT" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtAliVertical"
        android:layout_width="158dp"
        android:layout_height="33dp"
        android:text="@string/verticalAli"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/txtAliHorizontal"
        android:layout_width="158dp"
        android:layout_height="33dp"
        android:text="@string/horizontalAli"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <RadioGroup
        android:id="@+id/rGroup2"
        android:layout_width="168dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795">

        <RadioButton
            android:id="@+id/rbLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izquierda" />

        <RadioButton
            android:id="@+id/rbCentro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centro" />

        <RadioButton
            android:id="@+id/rbRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/derecha" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>